# monorepo

./: .bazelignore  .bazeliskrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  docker-compose-db-only.yaml  docker-compose-db.yaml  docker-compose.yaml  docker-compose.yml  eslintrc.json  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.in  requirements.txt
app-1/: BUILD.bazel
app-1/src/: main.ts
app-2/: BUILD.bazel
app-2/src/: main.ts
app-3/: BUILD.bazel  app-3.py  pyrightconfig.json
app_3/: BUILD.bazel  app_3.py  test.py
databases/one/: BUILD.bazel
databases/one/custom-sql/customer-sql/: V1.0.1__create_table_two_for_customer.sql
databases/one/custom-sql/dev-sql/: V1.0.1__create_table_two_for_dev.sql  V1.0.2__add_names_to_one.sql
databases/one/sql/: V1__create_tables.sql
databases/one/src/main/java/db/migration/: V2_0_2_1__Update_one.java
postgres/: BUILD.bazel
postgres/postgres_init/: 1_create_databases.sql
