load("@npm//:defs.bzl", "npm_link_all_packages")

# link all dependencies from root package.json
npm_link_all_packages(name = "node_modules")
package(default_visibility = ["//visibility:public"])

genrule(
    name = "eslintconfig",
    # srcs = ["//Documentation:licenses.txt"],
    srcs = ["eslintrc.json"],
    outs = [".eslintrc.json"],
    cmd = "cp $< $@",
)

genrule(
    name = "prettierconfig",
    srcs = ["prettierrc.json"],
    outs = [".prettierrc.json"],
    cmd = "cp $< $@",
)
