load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# link all dependencies from root package.json
npm_link_all_packages(name = "node_modules")
package(default_visibility = ["//visibility:public"])


# This rule adds a convenient way to update the requirements.txt file.
#
# You can run it like so:
# bazel run //:requirements.update
#
compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)
