load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_image_layer")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//container:layer.bzl", "container_layer")

npm_link_all_packages(name = "node_modules")

SRC_PATTERNS = [
    "src/*.ts",
]

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
      "//:node_modules/@monorepo/tsconfig",
      "//:node_modules/@tsconfig/node16-strictest"
    ],
)

ts_project(
    name = "app_js",
    srcs = ["src/main.ts"],
    tsconfig = ":tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/@monorepo/two",
    ],
)

js_binary(
    name = "app-2",
    data = [":app_js"],
    entry_point = "src/main.js",
)

eslint_bin.eslint_test(
    name = "eslint_test",
    timeout="moderate",
    size="small",
    args = ["{}/{}".format(
        package_name(),
        p,
    ) for p in SRC_PATTERNS],
    data = [
        "package.json",
        ".eslintrc.js",
        ".prettierrc.json",
        "tsconfig.json",
        "//:node_modules/@monorepo/tsconfig",
        "//:node_modules/@tsconfig/node16-strictest",
        "//:node_modules/@monorepo/eslint-config",
        "//:node_modules/@monorepo/prettier-config",
        "//:node_modules/eslint-plugin-node",
        "//:node_modules/eslint-config-prettier",
        "//:node_modules/eslint-plugin-prettier",
        "//:node_modules/@typescript-eslint/eslint-plugin",
        "//:node_modules/@typescript-eslint/parser",
        "//:node_modules/prettier",
    ] + glob(SRC_PATTERNS),
)

# Image
js_image_layer(
    name = "layers",
    binary = ":app-2",
    root = "/app",
    visibility = ["//visibility:__pkg__"],
)

filegroup(
    name = "app_tar",
    srcs = [":layers"],
    output_group = "app",
)

container_layer(
    name = "app_layer",
    tars = [":app_tar"],
)

filegroup(
    name = "node_modules_tar",
    srcs = [":layers"],
    output_group = "node_modules",
)

container_layer(
    name = "node_modules_layer",
    tars = [":node_modules_tar"],
)

container_image(
    name = "image",
    architecture = "amd64",  # or arm64

    # Since js_binary depends on bash we have to bring in a base image that has bash
    base = "@debian_amd64//image",  # or "@debian_arm64//image", if you are on an arm machine
    # This is going to be /{root of js_image_layer}/{package_name()}/{name of js_binary}
    cmd = ["/app/app-2/app-2"],
    entrypoint = ["bash"],
    layers = [
        ":app_layer",
        ":node_modules_layer",
    ],
)
